--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1954,11 +1954,11 @@
  PAP_vatican_neutrality:0 "Vatican City State"
  PAP_vatican_neutrality_DEF:0 "the Vatican City State"
 
- TUR_CUP:0 "Ottoman Empire"
- TUR_CUP_DEF:0 "the Ottoman Empire"
+ TUR_CUP:0 "Sublime Ottoman State"
+ TUR_CUP_DEF:0 "the Sublime Ottoman State"
+ TUR_CUP_ADJ:0 "Ottoman"
  TUR_CUP_communism:0 "Ottoman Socialist Federation"
  TUR_CUP_communism_DEF:0 "the Ottoman Socialist Federation"
- TUR_CUP_ADJ:0 "Ottoman"
 
  TUR_ottoman_syria:0 "Ottoman Syria"
  TUR_ottoman_syria_DEF:0 "the Ottoman Provinces in Syria Under the Command of Ahmed Cemâl Paşa"
