--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -1904,7 +1904,6 @@
  CHI_ZHE_attack_FNG_desc:0 "The hegemony of Zhili crumbled, and Fengtian threatens. The only recourse is to take Nanjing and claim our own sphere in the south."
  CHI_sell_some_railroad_bruh:0 "Sell Railroad Concession of [FROM.GetName]"
 
- #Turkey
  TUR_OPDA_TOOLTIP:0 "[TUR_OPDA_TOOLTIP]"
  TUR_OPDA_DISSOLVED_TOOLTIP:0 "§YOttoman Public Debt Administration\n*DISSOLVED*§!"
  TUR_remove_debt_1:0 "Modify §YOttoman Public Debt Administration§! by\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-1.0%§!\n"
@@ -6011,7 +6010,6 @@
  TUR_increase_jerusalem_centralization_20:0 "Modify §YCentralization§! of §YJerusalem Vilayet§! by §G+20%§!\n"
  TRS_arabist_movement:0 "Arabist Movement"
  TRS_arabist_movement_desc:0 "[TRS_arabist_movement_desc]"
- TUR_has_naval_blockade:0 "Has national spirit §YNaval Blockade§!\n"
  TUR_has_arab_opposition:0 "Has national spirit §YArab Opposition§!\n"
  TRS_arabist_movement_desc1:0 "Arabist movement is a parallel movement to the nationalist Young Turk movement. Formulated around the same time, the movement has been seeking icreased autonomoy and equal representation for Arab lands within the Ottoman Empire. As they actively undermine our government's centralization and Turkification policies, they might cause problem if they become too powerful."
  TRS_arabist_movement_desc2:0 "Arabist movement is a parallel movement to the nationalist Young Turk movement. Formulated around the same time, the movement has been seeking icreased autonomoy and equal representation for Arab lands within the Ottoman Empire. As they actively undermine our government's centralization and Turkification policies, they might cause problem if they become too powerful.\n\nIn order to execute actions to surpress Arabists, we need to have a justification.\nCurrent §YOppression Justifications§!: [?TRS_oppression_justification|Y0]"
@@ -6125,6 +6123,47 @@
  TRS_mobile_headquarters_decision_category:0 "Mobile Headquarters"
  TRS_mobile_headquarters_decision:0 "Relocate Headquarters to [FROM.GetName]"
  TRS_mobile_headquarters_decision_desc:0 "As this region needs him the most, Ahmed Cemâl Paşa will relocate its headquarters to [FROM.GetName], ensuring everything is safe and sound."
+ TUR_starving_syria:0 "Starving Syria"
+ TUR_blocked_famine_reduce_20:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G-10.0%§!\n£stability_texticon  Stability: §G+10.00%§!\n£stability_texticon  Weekly Stability Gain: §G+10.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+10.00%§!\n\n"
+ TUR_blocked_famine_reduce_20_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+10.0%§!\n\n"
+ TUR_blocked_famine_reduce_19:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G-9.5%§!\n£stability_texticon  Stability: §G+9.50%§!\n£stability_texticon  Weekly Stability Gain: §G+9.50%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+9.50%§!\n\n"
+ TUR_blocked_famine_reduce_19_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+9.5%§!\n\n"
+ TUR_blocked_famine_reduce_18:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G-9.0%§!\n£stability_texticon  Stability: §G+9.00%§!\n£stability_texticon  Weekly Stability Gain: §G+9.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+9.00%§!\n\n"
+ TUR_blocked_famine_reduce_18_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+9.0%§!\n\n"
+ TUR_blocked_famine_reduce_17:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G-8.5%§!\n£stability_texticon  Stability: §G+8.50%§!\n£stability_texticon  Weekly Stability Gain: §G+8.50%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+8.50%§!\n\n"
+ TUR_blocked_famine_reduce_17_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+8.5%§!\n\n"
+ TUR_blocked_famine_reduce_16:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G-8.0%§!\n£stability_texticon  Stability: §G+8.00%§!\n£stability_texticon  Weekly Stability Gain: §G+8.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+8.00%§!\n\n"
+ TUR_blocked_famine_reduce_16_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+8.0%§!\n\n"
+ TUR_blocked_famine_reduce_15:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G-7.5%§!\n£stability_texticon  Stability: §G+7.50%§!\n£stability_texticon  Weekly Stability Gain: §G+7.50%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+7.50%§!\n\n"
+ TUR_blocked_famine_reduce_15_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+7.5%§!\n\n"
+ TUR_blocked_famine_reduce_14:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G-7.0%§!\n£stability_texticon  Stability: §G+7.00%§!\n£stability_texticon  Weekly Stability Gain: §G+7.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+7.00%§!\n\n"
+ TUR_blocked_famine_reduce_14_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+7.0%§!\n\n"
+ TUR_blocked_famine_reduce_13:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G-6.5%§!\n£stability_texticon  Stability: §G+6.50%§!\n£stability_texticon  Weekly Stability Gain: §G+6.50%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+6.50%§!\n\n"
+ TUR_blocked_famine_reduce_13_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+6.5%§!\n\n"
+ TUR_blocked_famine_reduce_12:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G-6.0%§!\n£stability_texticon  Stability: §G+6.00%§!\n£stability_texticon  Weekly Stability Gain: §G+6.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+6.00%§!\n\n"
+ TUR_blocked_famine_reduce_12_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+6.0%§!\n\n"
+ TUR_blocked_famine_reduce_11:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G-5.5%§!\n£stability_texticon  Stability: §G+5.50%§!\n£stability_texticon  Weekly Stability Gain: §G+5.50%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+5.50%§!\n\n"
+ TUR_blocked_famine_reduce_11_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+5.5%§!\n\n"
+ TUR_blocked_famine_reduce_10:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G-5.0%§!\n£stability_texticon  Stability: §G+5.00%§!\n£stability_texticon  Weekly Stability Gain: §G+5.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+5.00%§!\n\n"
+ TUR_blocked_famine_reduce_10_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+5.0%§!\n\n"
+ TUR_blocked_famine_reduce_9:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G-4.5%§!\n£stability_texticon  Stability: §G+4.50%§!\n£stability_texticon  Weekly Stability Gain: §G+4.50%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+4.50%§!\n\n"
+ TUR_blocked_famine_reduce_9_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+4.5%§!\n\n"
+ TUR_blocked_famine_reduce_8:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G-4.0%§!\n£stability_texticon  Stability: §G+4.00%§!\n£stability_texticon  Weekly Stability Gain: §G+4.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+4.00%§!\n\n"
+ TUR_blocked_famine_reduce_8_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+4.0%§!\n\n"
+ TUR_blocked_famine_reduce_7:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G-3.5%§!\n£stability_texticon  Stability: §G+3.50%§!\n£stability_texticon  Weekly Stability Gain: §G+3.50%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+3.50%§!\n\n"
+ TUR_blocked_famine_reduce_7_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+3.5%§!\n\n"
+ TUR_blocked_famine_reduce_6:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G-3.0%§!\n£stability_texticon  Stability: §G+3.00%§!\n£stability_texticon  Weekly Stability Gain: §G+3.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+3.00%§!\n\n"
+ TUR_blocked_famine_reduce_6_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+3.0%§!\n\n"
+ TUR_blocked_famine_reduce_5:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G-2.5%§!\n£stability_texticon  Stability: §G+2.50%§!\n£stability_texticon  Weekly Stability Gain: §G+2.50%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+2.50%§!\n\n"
+ TUR_blocked_famine_reduce_5_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+2.5%§!\n\n"
+ TUR_blocked_famine_reduce_4:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G-2.0%§!\n£stability_texticon  Stability: §G+2.00%§!\n£stability_texticon  Weekly Stability Gain: §G+2.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+2.00%§!\n\n"
+ TUR_blocked_famine_reduce_4_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+2.0%§!\n\n"
+ TUR_blocked_famine_reduce_3:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G-1.5%§!\n£stability_texticon  Stability: §G+1.50%§!\n£stability_texticon  Weekly Stability Gain: §G+1.50%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+1.50%§!\n\n"
+ TUR_blocked_famine_reduce_3_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+1.5%§!\n\n"
+ TUR_blocked_famine_reduce_2:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G-1.0%§!\n£stability_texticon  Stability: §G+1.00%§!\n£stability_texticon  Weekly Stability Gain: §G+1.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+1.00%§!\n\n"
+ TUR_blocked_famine_reduce_2_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+1.0%§!\n\n"
+ TUR_blocked_famine_reduce_1:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §G-0.5%§!\n£stability_texticon  Stability: §G+0.50%§!\n£stability_texticon  Weekly Stability Gain: §G+0.50%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §G+0.50%§!\n\n"
+ TUR_blocked_famine_reduce_1_state:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §G+0.5%§!\n\n"
 
  TUR_decision_cost_minority:0 "[TUR.turkeyminoritycost]"
  TUR_decision_cost_minority_blocked:0 "[TUR.turkeyminoritycostblocked]"
