--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4504,11 +4504,12 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.46.d:0 "An earthquake stroke our Anatolian province of Burder, which is located near Isparta. The earthquake effectively destroyed any settlement present in the area, with also other historically significant monuments being also effected. In the centre of Isparte, the great Mosque was destroyed with more than half of the homes.\nThis earthquake has effectively tested our empire's capability of looking after its populace."
  ottoman.46.a:0 "There's nothing left to recover."
  ottoman.47.t:0 "Blockade of the Eastern Mediterranea"
- ottoman.47.d:0 "Our recent war decision with France and Britain have had some unintended consequences. Being naval powers, our enemies have started a blockade against our nation. Unless anything is done against this blockade, it'll slowly starve our nation."
- ottoman.47.a:0 "Pray that you're not starving- oh..."
+ ottoman.47.d:0 "Our recent war decision have had some unintended consequences. Being naval powers, our enemies have started a blockade against our nation. Unless something is done against this blockade, it'll slowly starve our nation."
+ ottoman.47.a:0 "You should pray you're not starving- oh..."
  ottoman.48.t:0 "The Great Famine of Mount Lebanon"
  ottoman.48.d:0 "War time years are indeed no exception to scarcity of resources. While this has been the case for all across our empire, not only Mount Lebanon but whole of Syria is struct with an exceptional case. A a swarm of locusts devoured the crops in Syria, resulting in vast food shortages. As an unsuccessful harvest season combined with the war time conditions, it resulted in an all out famine.\nWhile the famine is a devastating event, it's nothing the glorious Ottoman state can't deal with. Yet other factors, both domestic and external, could very well lead to the situation spiral out of control."
  ottoman.48.a:0 "We should deal with it as soon as possible."
+ ottoman.48.tt:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-10.0%§!\n\n"
  ottoman.49.t:0 "Aegean Crisis"
  ottoman.49.d:0 "As war is brewing in Europe, the effects of it is hitting our shores. Being involved with the war, the [TUR.GetAdjective] government has issued am ultimatium. Seeing the Greek control of the Greek islands as a security threat, the Ottomans have demanded the transfer of islands on their shores."
  ottoman.49.a:0 "We wont surrender our people to [TUR.GetAdjective] subjugation."
@@ -4887,6 +4888,52 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.152.d:0 "What started with the intention of securing the independence of Western Thrace soon turned into a full blown war. Yet thanks to our brave soldiers, our enemies have caved in for a peace. Through several border adjustments here and administrative restructuring there, we can achieve a resonable peace."
  ottoman.152.a:0 "Western Thrace is secured."
  ottoman.152.b:0 "War in the East is over."
+ ottoman.153.t:0 "Blockade Worsens the Famine"
+ ottoman.153.d:0 "The blockade we face on the Eastern Mediterranean does more than crippling our war effort. The recent famine in Mount Lebanon that is effecting our Syrian provinces are worsened by the blockade. As necessary food supplies are prevented to reach our shores because of our enemies, the situation gets worse day by day."
+ ottoman.153.a:0 "We're imprisoned in our own nation."
+ TUR_naval_blockade_famine_20:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+10.0%§!\n£stability_texticon  Stability: §R-10.00%§!\n£stability_texticon  Weekly Stability Gain: §R-10.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-10.00%§!\n\n"
+ ottoman.153.tt.20:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-10.0%§!\n\n"
+ TUR_naval_blockade_famine_19:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+9.5%§!\n£stability_texticon  Stability: §R-9.50%§!\n£stability_texticon  Weekly Stability Gain: §R-9.50%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-9.50%§!\n\n"
+ ottoman.153.tt.19:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-9.5%§!\n\n"
+ TUR_naval_blockade_famine_18:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+9.0%§!\n£stability_texticon  Stability: §R-9.00%§!\n£stability_texticon  Weekly Stability Gain: §R-9.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-9.00%§!\n\n"
+ ottoman.153.tt.18:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-9.0%§!\n\n"
+ TUR_naval_blockade_famine_17:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+8.5%§!\n£stability_texticon  Stability: §R-8.50%§!\n£stability_texticon  Weekly Stability Gain: §R-8.50%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-8.50%§!\n\n"
+ ottoman.153.tt.17:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-8.5%§!\n\n"
+ TUR_naval_blockade_famine_16:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+8.0%§!\n£stability_texticon  Stability: §R-8.00%§!\n£stability_texticon  Weekly Stability Gain: §R-8.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-8.00%§!\n\n"
+ ottoman.153.tt.16:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-8.0%§!\n\n"
+ TUR_naval_blockade_famine_15:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+7.5%§!\n£stability_texticon  Stability: §R-7.50%§!\n£stability_texticon  Weekly Stability Gain: §R-7.50%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-7.50%§!\n\n"
+ ottoman.153.tt.15:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-7.5%§!\n\n"
+ TUR_naval_blockade_famine_14:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+7.0%§!\n£stability_texticon  Stability: §R-7.00%§!\n£stability_texticon  Weekly Stability Gain: §R-7.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-7.00%§!\n\n"
+ ottoman.153.tt.14:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-7.0%§!\n\n"
+ TUR_naval_blockade_famine_13:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+6.5%§!\n£stability_texticon  Stability: §R-6.50%§!\n£stability_texticon  Weekly Stability Gain: §R-6.50%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-6.50%§!\n\n"
+ ottoman.153.tt.13:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-6.5%§!\n\n"
+ TUR_naval_blockade_famine_12:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+6.0%§!\n£stability_texticon  Stability: §R-6.00%§!\n£stability_texticon  Weekly Stability Gain: §R-6.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-6.00%§!\n\n"
+ ottoman.153.tt.12:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-6.0%§!\n\n"
+ TUR_naval_blockade_famine_11:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+5.5%§!\n£stability_texticon  Stability: §R-5.50%§!\n£stability_texticon  Weekly Stability Gain: §R-5.50%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-5.50%§!\n\n"
+ ottoman.153.tt.11:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-5.5%§!\n\n"
+ TUR_naval_blockade_famine_10:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+5.0%§!\n£stability_texticon  Stability: §R-5.00%§!\n£stability_texticon  Weekly Stability Gain: §R-5.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-5.00%§!\n\n"
+ ottoman.153.tt.10:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-5.0%§!\n\n"
+ TUR_naval_blockade_famine_9:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+4.5%§!\n£stability_texticon  Stability: §R-4.50%§!\n£stability_texticon  Weekly Stability Gain: §R-4.50%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-4.50%§!\n\n"
+ ottoman.153.tt.9:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-4.5%§!\n\n"
+ TUR_naval_blockade_famine_8:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+4.0%§!\n£stability_texticon  Stability: §R-4.00%§!\n£stability_texticon  Weekly Stability Gain: §R-4.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-4.00%§!\n\n"
+ ottoman.153.tt.8:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-4.0%§!\n\n"
+ TUR_naval_blockade_famine_7:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+3.5%§!\n£stability_texticon  Stability: §R-3.50%§!\n£stability_texticon  Weekly Stability Gain: §R-3.50%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-3.50%§!\n\n"
+ ottoman.153.tt.7:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-3.5%§!\n\n"
+ TUR_naval_blockade_famine_6:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+3.0%§!\n£stability_texticon  Stability: §R-3.00%§!\n£stability_texticon  Weekly Stability Gain: §R-3.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-3.00%§!\n\n"
+ ottoman.153.tt.6:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-3.0%§!\n\n"
+ TUR_naval_blockade_famine_5:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+2.5%§!\n£stability_texticon  Stability: §R-2.50%§!\n£stability_texticon  Weekly Stability Gain: §R-2.50%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-2.50%§!\n\n"
+ ottoman.153.tt.5:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-2.5%§!\n\n"
+ TUR_naval_blockade_famine_4:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+2.0%§!\n£stability_texticon  Stability: §R-2.00%§!\n£stability_texticon  Weekly Stability Gain: §R-2.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-2.00%§!\n\n"
+ ottoman.153.tt.4:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-2.0%§!\n\n"
+ TUR_naval_blockade_famine_3:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+1.5%§!\n£stability_texticon  Stability: §R-1.50%§!\n£stability_texticon  Weekly Stability Gain: §R-1.50%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-1.50%§!\n\n"
+ ottoman.153.tt.3:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-1.5%§!\n\n"
+ TUR_naval_blockade_famine_2:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+1.0%§!\n£stability_texticon  Stability: §R-1.00%§!\n£stability_texticon  Weekly Stability Gain: §R-1.00%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-1.00%§!\n\n"
+ ottoman.153.tt.2:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-1.0%§!\n\n"
+ TUR_naval_blockade_famine_1:0 "Modify §YGreat Famine of Syria§! by\n£supply_consumption_texticon  Supply Consumption: §R+0.5%§!\n£stability_texticon  Stability: §R-0.50%§!\n£stability_texticon  Weekly Stability Gain: §R-0.50%§!\n£war_support_modifiericons_texticon  Weekly War Support Gain: §R-0.50%§!\n\n"
+ ottoman.153.tt.1:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£population_texticon  Monthly Population: §R-0.5%§!\n\n"
+ ottoman.154.t:0 "Blockade of the Eastern Mediterranea"
+ ottoman.154.d:0 "Our main government's recent war decision have had some unintended consequences. Being naval powers, our enemies have started a blockade against the rest of our nation. As expected, the blockade is also affecting the regions under our command. Unless something is done against this blockade, it'll slowly starve our nation, including the regions under our commands."
+ ottoman.154.a:0 "You should pray you're not starving- oh..."
 
  ottoman_syria.1.t:0 "Küçük Cemal to Syria"
  ottoman_syria.1.d:0 "As the 4th army is being organized in Syria, governor responsible of the Syrian provinces [TRS.GetLeader] has requested the appointment of Mehmed Cemal Paşa. In order to provide a greater military presence in the region, Küçük Cemal Paşa will be appointed to Syria."
@@ -5311,8 +5358,8 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman..163.t:0 "Al-Idrisi's Rebellion in Asir"
  ottoman..163.d:0 "A debate in the court over Sharia law reignited Al-Idrisi's rebellion. Alongside the overall instability it'll cause in the region, Al-Idrisi can contact foreigners for support. In an event of a major war, we may have to seek truce with them."
  ottoman..163.a:0 "They're too insignificant to harm to grand Ottoman state."
- TUR_ottoman_arab_minority_modify_resistance_target_10:0 "Modify £ww1_flag_ARB §YArab Minority§! as: Resistance Target: §R+10%§!"
- TUR_ottoman_arab_minority_modify_resistance_target_10_2:0 "Modify £ww1_flag_ARB §YArab Minority§! as: Resistance Target: §G-10%§!"
+ TUR_ottoman_arab_minority_modify_resistance_target_10:0 "Modify £ww1_flag_ARB §YArab Minority§! by\nResistance Target: §R+10%§!"
+ TUR_ottoman_arab_minority_modify_resistance_target_10_2:0 "Modify £ww1_flag_ARB §YArab Minority§! by\nResistance Target: §G-10%§!"
  ottoman..164.t:0 "Elections of [GetYear]"
  ottoman..164.d:0 "With the victory of İttihat-ı Muhammedi Fırkası, the Islamic Conservative party, in this elections, the party needs a leader to shape the party agenda and lead the nation. Different factions within the party striving for the majority in the party. One of these factions are modernists led by Said-i Nursi which takes a renewed look at İslam and on how to promote it. On the other hand, hardliners led by Mustafa Sabri Efendi arguing that the survival of the empire can only be achieved through the elimination of nationalism and proclaiming Muslim unity. The victor is to shape the fate of the empire and Islam to some extend."
  ottoman..164.a:0 "Said-i Nursi wins."
@@ -5333,7 +5380,7 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman..169.d:0 "As we've expanded military recruitment to all sides of our empire, it has saw many attention by many minorities. By enlisting in the army, many soldiers have gained various privilages. With such new innovations, an Arab organization Al-Qahtaniya has asked our support to enlist more Arabs. Originally being a literature society under İttihak ve Terakki Fırkası, they're benefited more under our liberal rule. The society also has its paramilitary wing, which has been made official with the expansion of our new army service. Seeking to protect their newly gained rights and to protect the government who brought them these rights, they've asked to reqruit more Arabs for our army."
  ottoman..169.a:0 "It's too risky to give them too much power."
  ottoman..169.b:0 "Let them recruit more people, it'll only be to our advantage."
- TUR_ottoman_arab_recruitable_population_factor:0 "Modify £ww1_flag_ARB §YArab Minority§! as: £manpower_texticon  Recruitable Population: §G+8.00%§!"
+ TUR_ottoman_arab_recruitable_population_factor:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+8.00%§!"
  TUR_giving_too_much_power_to_arabs_may_lead_to_smth:0 "§RGiving too much power to Al-Qahtaniya might result in untentional consequences.§!"
  ottoman..170.t:0 "Al-Qahtaniya Influences Elections"
  ottoman..170.d:0 "AS the recent elections were held within the empire, Al-Qahtaniya with its newly gained influence over a large part of our empire has decided to push for its own members. As we've let them do a mass recruitment of the Arabs within the empire, they've raised an amount of paramilitaries that is a match for the Ottoman army. Our hands are tied, and there's not much to do. We must welcome the Al-Qahtaniya appointed new grand vizier."
@@ -5372,14 +5419,14 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman..181.t:0 "Radical Change in Racial Policies"
  ottoman..181.d:0 "Following the early elections and fall of Al Qahtaniya, Grand Vizier Rıza Paşa has announced new policies targeting the minorities and racial groups. Arguing that the liberal policies towards minorities have gone too far, he reverted many of the changes, especially those about the racial diversity in the army."
  ottoman..181.a:0 "We won't repeat our past mistakes."
- TUR_ottoman_arab_recruitable_population_factor2:0 "Modify £ww1_flag_ARB §YArab Minority§! as: £manpower_texticon  Recruitable Population: §R-8.00%§!"
+ TUR_ottoman_arab_recruitable_population_factor2:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §R-8.00%§!"
  TUR_rebanned_minority_parties_tt:0 "§YMinority parties§! are banned."
- TUR_ottoman_arab_recruitable_population_factor05:0 "Modify £ww1_flag_ARB §YArab Minority§! as: £manpower_texticon  Recruitable Population: §G+5.00%§!"
- TUR_ottoman_arab_recruitable_population_factor052:0 "Modify £ww1_flag_ARB §YArab Minority§! as: £manpower_texticon  Recruitable Population: §R-5.00%§!"
- TUR_ottoman_armenian_recruitable_population_factor05:0 "Modify £ww1_flag_ARM §YArmenian Minority§! as: £manpower_texticon  Recruitable Population: §G+5.00%§!"
- TUR_ottoman_armenian_recruitable_population_factor052:0 "Modify £ww1_flag_ARM §YArmenian Minority§! as: £manpower_texticon  Recruitable Population: §R-5.00%§!"
- TUR_ottoman_south_slavic_recruitable_population_factor05:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! as: £manpower_texticon  Recruitable Population: §G+5.00%§!"
- TUR_ottoman_south_slavic_recruitable_population_factor052:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! as: £manpower_texticon  Recruitable Population: §R-5.00%§!"
+ TUR_ottoman_arab_recruitable_population_factor05:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!"
+ TUR_ottoman_arab_recruitable_population_factor052:0 "Modify £ww1_flag_ARB §YArab Minority§! by\n£manpower_texticon  Recruitable Population: §R-5.00%§!"
+ TUR_ottoman_armenian_recruitable_population_factor05:0 "Modify £ww1_flag_ARM §YArmenian Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!"
+ TUR_ottoman_armenian_recruitable_population_factor052:0 "Modify £ww1_flag_ARM §YArmenian Minority§! by\n£manpower_texticon  Recruitable Population: §R-5.00%§!"
+ TUR_ottoman_south_slavic_recruitable_population_factor05:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! by\n£manpower_texticon  Recruitable Population: §G+5.00%§!"
+ TUR_ottoman_south_slavic_recruitable_population_factor052:0 "Modify £ww1_game_rule_flag_YUG §YSouth Slavic Minority§! by\n£manpower_texticon  Recruitable Population: §R-5.00%§!"
  ottoman..182.t:0 "Selecting the Head of the Party"
  ottoman..182.d:0 "As Al Qahtaniya has eliminated all opposition, its time to decide who gets to take the leadership of the party. There are many voices among our organization and party. Liberals, conservatives, militarists and even the monarchists are trying to take the power for themselves. The group which takes the power will decide the future of the part and the empire."
  ottoman..182.a:0 "Nuri Al Said for a strong Arab empire."
