--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4844,7 +4844,12 @@
  TUR_confiscate_entente_investments_tt:0 "\nIf completed focus §YFrench Investments in Syria§!:"
  TUR_import_german_grain:0 "Import German Grain"
  TUR_import_german_grain_desc:0 "The Entente blockade has been a thorn on our side. Yet luckly, recent advancements on the Ukrainian front by the Germans have eased their own blockade. Perhaps we can also benefit from the Ukrainian grain and ease the blockade put on us."
- TUR_import_german_grain_tt:0 "Has national spirit §YNaval Blockade§!"
+ TUR_naval_blockade_reduce_10:0 "Modify §YNaval Blockade§! by\n£population_texticon  Monthly Population: §G+10.0%§!\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-5.0%§!\n£stability_texticon  Stability: §G+10.00%§!\n\n"
+ TUR_naval_blockade_reduce_8:0 "Modify §YNaval Blockade§! by\n£population_texticon  Monthly Population: §G+8.0%§!\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-4.0%§!\n£stability_texticon  Stability: §G+8.00%§!\n\n"
+ TUR_naval_blockade_reduce_4:0 "Modify §YNaval Blockade§! by\n£population_texticon  Monthly Population: §G+4.0%§!\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-2.0%§!\n£stability_texticon  Stability: §G+4.00%§!\n\n"
+ TUR_naval_blockade_reduce_3:0 "Modify §YNaval Blockade§! by\n£population_texticon  Monthly Population: §G+3.0%§!\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-1.5%§!\n£stability_texticon  Stability: §G+3.00%§!\n\n"
+ TUR_naval_blockade_reduce_2:0 "Modify §YNaval Blockade§! by\n£population_texticon  Monthly Population: §G+2.0%§!\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-1.0%§!\n£stability_texticon  Stability: §G+2.00%§!\n\n"
+ TUR_naval_blockade_reduce_1:0 "Modify §YNaval Blockade§! by\n£population_texticon  Monthly Population: §G+1.0%§!\n£consumer_goods_texticon  Consumer Goods Factories factor: §Y-0.5%§!\n£stability_texticon  Stability: §G+1.00%§!\n\n"
  TUR_has_land_connection_tt:0 "Has §Ydirect land connection§! to §Y[GER.GetName]§! through §Yallied§! countries"
  TUR_retreat_to_aleppo:0 "Retreat to Aleppo"
  TUR_retreat_to_aleppo_desc:0 "Combined with the Grand Arab Revolt, British has been steadily pushing towards Levant. Instead of trying to defend, we must retreat to Aleppo and reorganize our forces."
