--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -962,7 +962,22 @@
  TUR_large_investment_in_the_ottomans_desc:0 "Our investments in [TUR.GetNameDef] is taking a toll in our industry. At least these factories will be eased after our investment is done."
  TUR_naval_blockade:0 "Naval Blockade"
  TUR_naval_blockade_desc:0 "The blockade of our enemies are proving to be a burden on our economy, effectively starving our nation."
- TUR_naval_blockade_instant_desc:0 "§RIf estimated enemies strength ratio of 50% or less compared to our navy, this idea will be removed§!"
+ TUR_naval_blockade_instant_desc:0 "§RIf estimated enemies strength ratio of 50% or less compared to our navy, this national spirit will be removed§!"
+ TUR_naval_blockade_tt:0 "[TUR_naval_blockade_monthly_population][TUR_naval_blockade_consumer_goods_factor][TUR_naval_blockade_stability_factor]"
+ TUR_naval_blockade_dm:0 "£pol_idea  Naval Blockade"
+ TUR_naval_blockade_dm_desc:0 "The blockade of our enemies are proving to be a burden on our economy, effectively starving our nation."
+ TUR_naval_blockade_monthly_population_yes:0 "£population_texticon  Monthly Population: [?TUR_nb_monthly_population|1+=%]\n"
+ TUR_naval_blockade_consumer_goods_factor_yes:0 "£consumer_goods_texticon  Consumer Goods Factories factor: [?TUR_nb_consumer_goods_factor|.1%Y]\n"
+ TUR_naval_blockade_stability_factor_yes:0 "£stability_texticon  Stability: [?TUR_nb_war_stability_factor|=2%+]\n"
+ TUR_naval_blockade_dummy:0 "Naval Blockade"
+ TUR_naval_blockade_dummy_desc:0 "The blockade of our enemies are proving to be a burden on our economy, effectively starving our nation."
+ TUR_naval_blockade_dummy_instant_desc:0 "§Rif our overlord does not have the national spirit Naval Blockade, this national spirit will be removed§!"
+ TUR_naval_blockade_dummy_tt:0 "[TUR_naval_blockade_dummy_monthly_population][TUR_naval_blockade_dummy_consumer_goods_factor][TUR_naval_blockade_dummy_stability_factor]\nEffects of this national spirit will be §Ymirrored by§! the effects of §YNaval Blockade§! on our §Yoverlord§!."
+ TUR_naval_blockade_dummy_dm:0 "£pol_idea  Naval Blockade"
+ TUR_naval_blockade_dummy_dm_desc:0 "The blockade of our enemies are proving to be a burden on our economy, effectively starving our nation."
+ TUR_naval_blockade_dummy_monthly_population_yes:0 "£population_texticon  Monthly Population: [?TUR.TUR_nb_monthly_population|1+=%]\n"
+ TUR_naval_blockade_dummy_consumer_goods_factor_yes:0 "£consumer_goods_texticon  Consumer Goods Factories factor: [?TUR.TUR_nb_consumer_goods_factor|.1%Y]\n"
+ TUR_naval_blockade_dummy_stability_factor_yes:0 "£stability_texticon  Stability: [?TUR.TUR_nb_war_stability_factor|=2%+]\n"
  TUR_balkan_pact_initiative:0 "Initiative of the Balkan Entente"
  TUR_islamic_army:0 "Islamic Army"
  TUR_islamic_army_tt:0 "When §Yat war§! with a §YMajor Power§!:\n£manpower_texticon  Weekly Manpower: §G+150§!\n£attack_texticon  Attack against major countries: §G+15.0%§!\n£defence_texticon  Defense against major countries: §G+15.0%§!\n"
@@ -994,7 +1009,7 @@
  TUR_listian_protectionism_idea_desc:0 "Unrestricted foreign trade has prevented a national competition to develop. By imposing protectionist measures, we'll provide the necessary environment for our national companies to compete."
  TUR_temporary_law_of_industrial_encouragement:0 "Temporary Law of Industrial Encouragement"
  TUR_temporary_law_of_industrial_encouragement_desc:0 "As industrialization on its own will take far too long, our state will have to push for its development by passing measures that'll encourage industrialization."
- TUR_temporary_law_of_industrial_encouragement_instant_desc:0 "§RWill be removed if has more than 35 factories§!\nGain §Y30 Political Power§! upon removal"
+ TUR_temporary_law_of_industrial_encouragement_instant_desc:0 "§RWill be removed if has more than 35 factories§!\nGain §Y35 Political Power§! upon removal"
  TUR_anatolian_grain:0 "Anatolian Grain"
  TUR_anatolian_grain_desc:0 "Anatolia with its untapped grain potential continues to fsacinate our politicians. If utilized correctly, we can end our reliance on foreign grain."
  TUR_national_economy:0 "National Economy"
@@ -1127,11 +1142,11 @@
  BUL_administrative_autonomy_desc:0 "This state has its own governing body, effectively making it autonomous in many matters."
  TUR_great_famine_of_syria:0 "Great Famine of Syria"
  TUR_great_famine_of_syria_desc:0 "War time scarcity combined with the drought of 1915 caused by the swarms of locusts has resulted in a famine that's threatening the survival of the Syrian people more than anything. Unless it's solved quickly, the famine will claim more lives"
- TUR_great_famine_of_syria_tt:0 "[TUR_great_famine_of_syria_stability_factor][TUR_great_famine_of_syria_supply_consumption_factor][TUR_great_famine_of_syria_stability_weekly_factor][TUR_great_famine_of_syria_war_support_weekly_factor]"
- TUR_great_famine_of_syria_stability_factor_yes:0 "£stability_texticon  Stability: [?TUR_gfs_stability_factor|=2%+]\n"
- TUR_great_famine_of_syria_supply_consumption_factor_yes:0 "£supply_consumption_texticon  Supply Consumption: [?TUR_gfs_supply_consumption_factor|1+=%]\n"
- TUR_great_famine_of_syria_stability_weekly_factor_yes:0 "£stability_texticon  Weekly Stability Gain: [?TUR_gfs_stability_weekly_factor|=2%+]\n"
- TUR_great_famine_of_syria_war_support_weekly_factor_yes:0 "£war_support_modifiericons_texticon  Weekly War Support Gain: [?TUR_gfs_war_support_weekly_factor|=2%+]\n"
+ TUR_great_famine_of_syria_tt:0 "[TUR_great_famine_of_syria_supply_consumption_factor][TUR_great_famine_of_syria_stability_factor][TUR_great_famine_of_syria_stability_weekly_factor][TUR_great_famine_of_syria_war_support_weekly_factor]"
+ TUR_great_famine_of_syria_supply_consumption_factor_yes:0 "£supply_consumption_texticon  Supply Consumption: [?global.TUR_gfs_supply_consumption_factor|1+=%]\n"
+ TUR_great_famine_of_syria_stability_factor_yes:0 "£stability_texticon  Stability: [?global.TUR_gfs_stability_factor|=2%+]\n"
+ TUR_great_famine_of_syria_stability_weekly_factor_yes:0 "£stability_texticon  Weekly Stability Gain: [?global.TUR_gfs_stability_weekly_factor|=2%+]\n"
+ TUR_great_famine_of_syria_war_support_weekly_factor_yes:0 "£war_support_modifiericons_texticon  Weekly War Support Gain: [?global.TUR_gfs_war_support_weekly_factor|=2%+]\n"
  TUR_great_famine_of_syria_dm:0 "£pol_idea  Great Famine of Syria"
  TUR_great_famine_of_syria_dm_desc:0 "War time scarcity combined with the drought of 1915 caused by the swarms of locusts has resulted in a famine that's threatening the survival of the Syrian people more than anything. Unless it's solved quickly, the famine will claim more lives"
 
@@ -1542,7 +1557,7 @@
  
 FRA_idea_union_sacree:0 "Union Sacrée"
 FRA_idea_union_sacree_desc:0 "The sacred union is an alliance of all the French parties in parliament. This means that all laws proposed by parliament are immediately validated by all parliamentarians."
-FRA_union_sacree_tt:0 "While this idea is active, §YAll focuses checking the number of seats will be §Gavailable§!§!."
+FRA_union_sacree_tt:0 "While this national spirit is active, §YAll focuses checking the number of seats will be §Gavailable§!§!."
 
 FRA_milice_nationale:0 "Milice Nationale"
 FRA_workers_cooperatives:0 "Workers Cooperatives"
