--- a/localisation/russian/ww1_decisions_l_russian.yml
+++ b/localisation/russian/ww1_decisions_l_russian.yml
@@ -1896,7 +1896,7 @@
  TUR_economy_name_text:0 "§oОсманский внешний долг§!"
  TUR_economy_name_text2:0 "§d---------------------------------§!"
  TUR_economy_name_lira:0 "§vНаша текущая сумма долга:§!"
- TUR_economy_name_lira2:0 "Фактор фабрик ТНП: [?opda_consumer_goods|.1%Y$]" #§Y[?opda_lira] Thousand Liras§!
+ TUR_economy_name_lira2:0 "Фактор фабрик ТНП: [?opda_consumer_goods|.1%Y$]"
  TUR_economy_dissolved_name_lira2:0 "§Y*РАСТВОРЕН*§!"
  TUR_OPDA_TOOLTIP:0 "[TUR_OPDA_TOOLTIP]"
  TUR_OPDA_TOOLTIP1:0 "§YОсманское управление государственным долгом§!\n\nЕжедневная стоимость политической власти: §R+0.05§!\nФактор фабрик ТНП: [?opda_consumer_goods|.1%Y$]\nСтоимость улучшения отношений: §G-10%§!\nРесурсы на продажу: §Y+20%§!\nГражданские разведданные другим: §R+20.0%§!"
@@ -1904,18 +1904,18 @@
  TUR_OPDA_TOOLTIP3:0 "§YОсманское управление государственным долгом§!\n\nЕжедневная стоимость политической власти: §R+0.05§!\nФактор фабрик ТНП: [?opda_consumer_goods|.1%Y$]\nСтоимость улучшения отношений: §G-10%§!\nРесурсы на продажу: §Y+20%§!\nГражданские разведданные другим: §R+20.0%§!"
  TUR_OPDA_TOOLTIP4:0 "§YОсманское управление государственным долгом§!\n\nФактор фабрик ТНП: [?opda_consumer_goods|.1%Y$]\nСтоимость улучшения отношений: §G-10%§!\nРесурсы на продажу: §Y+10%§!\nСкорость строительства §Yгражданских фабрик:§! §G+5.00%§!\nСкорость исследования в промышленности: §G+5%§!"
  TUR_OPDA_DISSOLVED_TOOLTIP:0 "§YОсманское управление государственным долгом\n*РАСТВОРЕН*§!"
- TUR_pay_our_debt_tooltip:0 "Значение фактора фабрик ТНП §YОсманского управления государственным долгом§! равно §Y0.0%§!" #Our debt is §Y0 Thousand Liras§!.
+ TUR_pay_our_debt_tooltip:0 "Значение фактора фабрик ТНП §YОсманского управления государственным долгом§! равно §Y0.0%§!"
  TUR_british_investment_to_iraq:0 "Британские инвестиции в Месапотамию"
  TUR_french_investment_to_syria:0 "Французские инвестиции в Сирию"
  TUR_german_investment_to_anatolia:0 "Немецкие инвестиции в Анатолию"
  TUR_italian_investment_to_libya:0 "Итальянские инвестиции в Траблусгарпе"
- TUR_add_debt_0098:0 "Изменит §YОсманское управление государственным долгом§! по\nФактору фабрик ТНП на: §Y1.0%§!" #Increases our debt by §Y0.098 Thousand Liras§!.
- TUR_add_debt_0148:0 "Изменит §YОсманское управление государственным долгом§! по\nФактору фабрик ТНП на: §Y2.0%§!" #Increases our debt by §Y0.148 Thousand Liras§!.
- TUR_add_debt_0295:0 "Изменит §YОсманское управление государственным долгом§! по\nФактору фабрик ТНП на: §Y3.0%§!" #Increases our debt by §Y0.295 Thousand Liras§!.
- TUR_add_debt_0492:0 "Изменит §YОсманское управление государственным долгом§! по\nФактору фабрик ТНП на: §Y5.0%§!" # Increases our debt by §Y0.590 Thousand Liras§!.
- TUR_add_debt_0993:0 "Изменит §YОсманское управление государственным долгом§! по\nФактору фабрик ТНП на: §Y10.0%§!" # Increases our debt by §Y0.885 Thousand Liras§!.
- TUR_add_debt_1475:0 "Изменит §YОсманское управление государственным долгом§! по\nФактору фабрик ТНП на: §Y15.0%§!" # Increases our debt by §Y1.475 Thousand Liras§!.
- debt_less_than_0:0 "Значение фактора фабрик ТНП §YОсманского управления государственным долгом§! составляет более §Y0.0%§!" #Our debt is more than §Y0 Thousand Liras§!."
+ TUR_add_debt_0098:0 "Изменит §YОсманское управление государственным долгом§! по\nФактору фабрик ТНП на: §Y1.0%§!"
+ TUR_add_debt_0148:0 "Изменит §YОсманское управление государственным долгом§! по\nФактору фабрик ТНП на: §Y2.0%§!"
+ TUR_add_debt_0295:0 "Изменит §YОсманское управление государственным долгом§! по\nФактору фабрик ТНП на: §Y3.0%§!"
+ TUR_add_debt_0492:0 "Изменит §YОсманское управление государственным долгом§! по\nФактору фабрик ТНП на: §Y5.0%§!"
+ TUR_add_debt_0993:0 "Изменит §YОсманское управление государственным долгом§! по\nФактору фабрик ТНП на: §Y10.0%§!"
+ TUR_add_debt_1475:0 "Изменит §YОсманское управление государственным долгом§! по\nФактору фабрик ТНП на: §Y15.0%§!"
+ debt_less_than_0:0 "Значение фактора фабрик ТНП §YОсманского управления государственным долгом§! составляет более §Y0.0%§!"
  TUR_pay_our_debt:0 "Распустить управление государственным долгом"
  TUR_dissolve_the_debt_council:0 "Распустить управление государственным долгом"
  TUR_debt_payment:0 "Выплата нашего долга"
