--- a/localisation/english/ww1_germany_l_english.yml
+++ b/localisation/english/ww1_germany_l_english.yml
@@ -460,6 +460,7 @@ ww1_germany_mft:0 "State of the Military Decreased by 15."
 GER_establish_the_general_headquarters.tt:0 "Add §YOHL Command§!, which grants (£mobilisation_texticon Mobilization Speed: §G+10.00%§!, £attacker_speed_texticon Divsions Speed: §G+5.00%§!, £defence_core_texticon Divsion Defence on Core Territory §G+5.00%§!)."
 GER_politische_abteilung.tt:0 "Modify §YOHL Command§! by\n£political_power_texticon Daily Political Power Gain: §G+0.10§!\n£stability_texticon Stability §G+10.00%§!"
 GER_operationsabteilung.tt:0 "Modify §YOHL Command§! by\n£supply_consumption_texticon Supply Consumption: §G-10.00%§!\n£construction_speed_milfactory_texticon §YMilitary Factory§! construction speed: §G+5.00%§!"
+GER_zental_abteilung.tt:0 "Modify §YOHL Command§! by\n£mobilisation_texticon Mobilization Speed: §G+5.00%§!\n£planning_speed_texticon Planning Speed: §G+15.00%§!\n£planning_max_texticon Max Planning: §G+10.00%§!"
 
 ww1_germanybundestrat:0 "When passed, the law will have the following effects:"
 
@@ -470,6 +471,8 @@ GER_german_migration:0 "German Migration"
 GER_porductional_efficiency:0 "Productional Efficiency"
 GER_solf_new_administration:0 "Solf's New Administration"
 GER_ohl_command:0 "OHL Command"
+GER_mobilisation_of_morale:0 "Mobilisation of Morale"
+GER_germanisation:0 "Germanisation"
 
 #Focuses
 
@@ -554,7 +557,7 @@ GER_financing_the_war_economy:0 "Financing the War Economy"
 GER_collaborating_with_trade_unions:0 "Collaborating with Trade Unions"
 GER_revived_anti_socialist_laws:0 "Revive Anti-Socialist Laws"
 GER_nachrichtenabteilung:0 "Nachrichtenabteilung"
-GER_a_great_mobilistation_of_moral:0 "A Great Mobilisation of Moral"
+GER_a_great_mobilistation_of_moral:0 "A Great Mobilisation of Morale"
 GER_bulletins_on_the_front:0 "Bulletins on the Front"
 GER_regulating_the_war_economy:0 "Regulate the War Economy"
 GER_totaler_krieg:0 "Totaler Krieg"
